GNOME Bugzilla – Bug 711190
asfdemux: signal 3D video
Last modified: 2015-06-11 02:24:32 UTC
Created attachment 258628 [details] [review] Add 3D parsing include dual stream 3D. Add 3D parsing in Extend content descriptor object. And bug fix in Advanced Mutual exclusion object parsing that is related with 3D dual stream. Set as caps value to pass that 3D information to decoder.
Thanks for the patch. I'm afraid this has to wait until we've agreed on API/conventions how to signal this stuff in general, instead of adding a custom "typeof3D" field.
@HyeJin, I always wonder that decoders have to know the type of 3D. Although I used typeof3D property as an indicator to deploy multiple decoders, I'm not sure whether the value of "typeof3D" has to be transferred into the decoders because I've seen only the value, "0x0d". Are there different values?
OK. If you decide how to send the signal, please let me know. I'll improve my patch as your opinion. (In reply to comment #1) > Thanks for the patch. I'm afraid this has to wait until we've agreed on > API/conventions how to signal this stuff in general, instead of adding a custom > "typeof3D" field.
@Justin, Yes. Different values are exist. "0x0d" is only for the dual stream 3D. If you test with single stream 3D file, like have side by side half value, you can see the "0x01" or "0x02" value for "typeof3D". (In reply to comment #2) > @HyeJin, I always wonder that decoders have to know the type of 3D. Although I > used typeof3D property as an indicator to deploy multiple decoders, I'm not > sure whether the value of "typeof3D" has to be transferred into the decoders > because I've seen only the value, "0x0d". Are there different values?
@Tim, could you share the progress of this issue? In my case, I defined "multipe-stream" property of caps to discern two cases, single or dual streams. It could be more general approach than using "typeof3d" because it doesn't have any meaning from specific demuxer logic. However, as you mentioned, it's not elegant. So If possible, I want to know the progress of your side discussion.
There is no progress. It depends on a more generic solution that covers all container formats/codecs/layouts.
Does anyone have a sample file for testing?
Created attachment 304914 [details] [review] asfdemux: Add support for stereoscopic video metadata. Add parsing of stereoscopic metadata, and place into the caps to the decoder. Fix parsing of Advanced Mutual Exclustion objects. https://bugzilla.gnome.org/show_bug.cgi?id=711190 Based on a patch by HyeJin Choi <meeshel78@hotmail.com>
For future reference, I found some test streams at http://www.3dtv.at/Movies/Index_en.aspx