asfdemux: Add support for stereoscopic video metadata.

Add parsing of stereoscopic metadata, and place into the caps to
the decoder.

Fix parsing of Advanced Mutual Exclustion objects.

https://bugzilla.gnome.org/show_bug.cgi?id=711190

Based on a patch by HyeJin Choi <meeshel78@hotmail.com>